include tests for controller